--- a/report/thesis/references.bib
+++ b/report/thesis/references.bib
@@ -228,6 +228,31 @@
   langid = {english}
 }
 
+@phdthesis{lidburyOchreDependentlyTyped2024,
+  type = {{{MEng Individual Project}}},
+  title = {Ochre: {{A Dependently Typed Systems Programming Language}}},
+  author = {Lidbury, Charlie},
+  year = {2024},
+  school = {Imperial College London}
+}
+
+@article{lohTutorialImplementationDependently2010,
+  title = {A {{Tutorial Implementation}} of a {{Dependently Typed Lambda Calculus}}},
+  author = {L{\"o}h, Andres and McBride, Conor and Swierstra, Wouter},
+  year = {2010},
+  journal = {Fundamenta Informaticae},
+  volume = {102},
+  number = {2},
+  pages = {177--207},
+  issn = {01692968},
+  doi = {10.3233/FI-2010-304},
+  url = {https://www.medra.org/servlet/aliasResolver?alias=iospress&doi=10.3233/FI-2010-304},
+  urldate = {2024-06-13},
+  abstract = {We present the type rules for a dependently typed core calculus together with a straightforward implementation in Haskell. We explicitly highlight the changes necessary to shift from a simply-typed lambda calculus to the dependently typed lambda calculus. We also describe how to extend our core language with data types and write several small example programs. The article is accompanied by an executable interpreter and example code that allows immediate experimentation with the system we describe.},
+  langid = {english},
+  file = {/Users/charlielidbury/Zotero/storage/L8NE9646/Löh et al. - 2010 - A Tutorial Implementation of a Dependently Typed L.pdf}
+}
+
 @inproceedings{lorch2020armada,
   title = {Armada: Low-Effort Verification of High-Performance Concurrent Programs},
   booktitle = {Proceedings of the 41st {{ACM SIGPLAN}} Conference on Programming Language Design and Implementation},
@@ -313,6 +338,20 @@
   archiveprefix = {arxiv},
   keywords = {Computer Science - Cryptography and Security,Computer Science - Programming Languages},
   file = {/Users/charlielidbury/Zotero/storage/6DNMIKF6/Protzenko et al. - 2017 - Verified Low-Level Programming Embedded in F.pdf;/Users/charlielidbury/Zotero/storage/2WRN5JKJ/Protzenko et al. - 2017 - Verified Low-Level Programming Embedded in F.html;/Users/charlielidbury/Zotero/storage/UTTHN35Q/Protzenko et al. - 2017 - Verified Low-Level Programming Embedded in F.html}
+}
+
+@phdthesis{protzenkoMezzoTypedLanguage2014,
+  title = {Mezzo: A Typed Language for Safe Effectful Concurrent Programs},
+  shorttitle = {Mezzo},
+  author = {Protzenko, Jonathan},
+  year = {2014},
+  month = sep,
+  url = {https://inria.hal.science/tel-01086106},
+  urldate = {2024-06-13},
+  abstract = {The present dissertation argues that better programming languages can be designed and implemented, so as to provide greater safety and reliability for computer programs. I sustain my claims through the example of Mezzo, a programming language in the tradition of ML, which I co-designed and implemented. Programs written in Mezzo enjoy stronger properties than programs written in traditional ML languages: they are data-race free; state changes can be tracked by the type system; a central notion of ownership facilitates modular reasoning. Mezzo is not the first attempt at designing a better programming language; hence, a first part strives to position Mezzo relative to other works in the literature. I present landmark results in the field, which served either as sources of inspiration or points of comparison. The subse- quent part is about the design of the Mezzo language. Using a variety of examples, I illustrate the language features as well as the safety gains that one obtains by writing their programs in Mezzo. In a subsequent part, I formalize the semantics of the Mezzo language. Mezzo is not just a type system that lives on paper: the final part describes the implementation of a type-checker for Mezzo, by formalizing the algorithms that I designed and the various ways the type-checker ensures that a program is valid.},
+  langid = {english},
+  school = {Universit{\'e} Paris Diderot - Paris 7},
+  file = {/Users/charlielidbury/Zotero/storage/XTDB5A83/Protzenko - 2014 - Mezzo a typed language for safe effectful concurr.pdf}
 }
 
 @misc{rust-anecdote,
@@ -413,6 +452,20 @@
   isbn = {978-0-201-71012-0},
   langid = {english},
   lccn = {005.13}
+}
+
+@book{wittgensteinTractatusLogicophilosophicus1922,
+  title = {Tractatus Logico-Philosophicus},
+  author = {Wittgenstein, Ludwig},
+  year = {1922},
+  series = {Oxford World's Classics},
+  publisher = {Oxford University press},
+  address = {Oxford},
+  url = {https://www.gutenberg.org/files/5740/5740-pdf.pdf},
+  abstract = {"Wittgenstein's Tractatus Logico-Philosophicus, first published in German in 1921 and in English translation in 1922, is one of the most influential philosophical texts of the twentieth century. It played a fundamental role in the development of analytic philosophy, and its philosophical ideas and implications have been fiercely debated ever since. This new translation improves on the two main earlier translations, taking advantage of the scholarship over the last century that has deepened our understanding of both the Tractatus and Wittgenstein's philosophy more generally, scholarship that has also involved discussion of the difficulties in translating the original German text and the issues of interpretation that arise"},
+  isbn = {978-0-19-886137-9},
+  langid = {english},
+  lccn = {160}
 }
 
 @misc{xiAppliedTypeSystem2017,
